--- a/css/deposit_info.css
+++ b/css/deposit_info.css
@@ -1,5 +1,5 @@
 body{
-    background: url(../img/deposit-bgrnd.svg), no-repeat;
+    background: url(../img/deposit-bgrnd.svg) no-repeat;
     background-size: cover;
 }
 
@@ -15,7 +15,7 @@ body{
 
 .deposit-info-text{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 800;
     font-size: 24px;
     position: absolute;
@@ -57,7 +57,7 @@ body{
 
 .question-1{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 18px;
     position: relative;
@@ -89,7 +89,7 @@ body{
 
 .answer-to-question-1 p{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 16px;
     margin-bottom: 0px;
@@ -106,7 +106,7 @@ body{
     margin: 0 auto;
     margin-top: 47px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 600;
     font-size: 18px;
     margin-bottom: 170px;
@@ -114,7 +114,7 @@ body{
 
 .question-2{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 18px;
     position: relative;
@@ -139,7 +139,7 @@ body{
 
 .answer-to-question-2 p{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 16px;
     margin-bottom: 0px;
@@ -179,7 +179,7 @@ body{
 }
 
 .navbar-item-link-text{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: black;
     font-size: 12px;
     font-weight: 600;
@@ -188,7 +188,7 @@ body{
 }
 
 .navbar-item-link-text-active{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: red;
     font-size: 12px;
     font-weight: 600;
