--- a/css/deposit_made_successfully.css
+++ b/css/deposit_made_successfully.css
@@ -1,6 +1,6 @@
 body{
 
-    background: url(../img/deposit-bgrnd.svg), no-repeat;
+    background: url(../img/deposit-bgrnd.svg) no-repeat;
     background-size: cover;
 
 }
@@ -29,7 +29,7 @@ body{
 
 .deposit-info-text{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 800;
     font-size: 24px;
     position: absolute;
@@ -59,7 +59,7 @@ body{
 }
 .successfull-operation-message{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 800;
     font-size: 20px;
     text-align: center;
@@ -118,7 +118,7 @@ body{
 }
 
 .navbar-item-link-text{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: black;
     font-size: 12px;
     font-weight: 600;
@@ -127,7 +127,7 @@ body{
 }
 
 .navbar-item-link-text-active{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: red;
     font-size: 12px;
     font-weight: 600;
