--- a/css/deposit_select_amount_of_money.css
+++ b/css/deposit_select_amount_of_money.css
@@ -1,5 +1,5 @@
 body{
-    background: url(../img/deposit-bgrnd.svg), no-repeat;
+    background: url(../img/deposit-bgrnd.svg) no-repeat;
     background-size: cover;
 }
 
@@ -27,7 +27,7 @@ body{
 
 .deposit-info-text{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 800;
     font-size: 24px;
     position: absolute;
@@ -55,7 +55,7 @@ body{
 
 .label-for-deposit{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 800;
     margin-left: 30px;
@@ -68,7 +68,7 @@ body{
     border: 0px solid transparent;
     border-radius: 12px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 36px;
     font-weight: 800;
     text-align: center;
@@ -98,7 +98,7 @@ body{
     transform: translate(0%, -50%);
     margin-bottom: 0px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 36px;
     font-weight: 800;
     text-align: center;
@@ -119,7 +119,7 @@ body{
     border: 0px solid transparent;
     border-radius: 12px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-weight: 700;
     transition: all 0.2s ease;
@@ -128,7 +128,7 @@ body{
 
 .make-deposit-button-link{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
@@ -166,7 +166,7 @@ input[type=number] {
 
 .make-a-deposit-link{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
@@ -211,7 +211,7 @@ input[type=number] {
 }
 
 .navbar-item-link-text{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: black;
     font-size: 12px;
     font-weight: 600;
@@ -220,7 +220,7 @@ input[type=number] {
 }
 
 .navbar-item-link-text-active{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: red;
     font-size: 12px;
     font-weight: 600;
