--- a/css/email_phone_num_style.css
+++ b/css/email_phone_num_style.css
@@ -9,7 +9,7 @@ body{
 }
 h1{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 14px;
     margin-bottom: 34px;
@@ -25,7 +25,7 @@ h1{
 }
 
 .form p{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: white;
     font-weight: 500;
     font-size: 16px;
@@ -39,7 +39,7 @@ h1{
     border-radius: 12px;
     backdrop-filter: blur(8px);
     padding-left: 14px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: white;
     font-weight: 400;
     font-size: 13px;
@@ -64,7 +64,7 @@ h1{
     padding-top: 13px;
     padding-bottom: 13px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 18px;
     transition: all 0.2s ease;
@@ -72,7 +72,7 @@ h1{
 
 .create-account-button-link{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 18px;
     text-decoration: none;
@@ -81,7 +81,7 @@ h1{
 
 .create-account-button-link:hover, .create-account-button-link:active{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 18px;
     text-decoration: none;
