--- a/css/more_support_countries.css
+++ b/css/more_support_countries.css
@@ -1,5 +1,5 @@
 body{
-    background: url(../img/more-support-countries-bgrnd.svg), no-repeat;
+    background: url(../img/more-support-countries-bgrnd.svg) no-repeat;
     background-size: cover;
 }
 
@@ -13,7 +13,7 @@ body{
 
 .supported-countries-title{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 800;
     font-size: 24px;
     margin-bottom: 0px;
@@ -24,7 +24,7 @@ body{
     margin-top: 17px;
     margin-left: 25px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 600;
 }
@@ -50,7 +50,7 @@ body{
 
 .supported-countries-list li p{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 0px;
@@ -90,7 +90,7 @@ body{
   }
   
   .navbar-item-link-text{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: black;
     font-size: 12px;
     font-weight: 600;
@@ -99,7 +99,7 @@ body{
   }
   
   .navbar-item-link-text-active{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: red;
     font-size: 12px;
     font-weight: 600;
