--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body::-webkit-scrollbar-track{
 }
 
 p, a{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 15px;
 }
