--- a/css/type_passsword.css
+++ b/css/type_passsword.css
@@ -1,5 +1,5 @@
 body{
-    background: url(../img/main-bgrnd.jpg), no-repeat;
+    background: url(../img/main-bgrnd.jpg) no-repeat;
     background-size: cover;
 }
 .arrow-back{
@@ -33,7 +33,7 @@ h1{
     justify-content: center;
     margin-bottom: 16px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-weight: 600;
 }
@@ -114,7 +114,7 @@ h1{
     align-items: center;
     justify-content: center;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 27px;
     font-weight: 500;
 }
@@ -129,7 +129,7 @@ h1{
     align-items: center;
     justify-content: center;
     color: black;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 27px;
     font-weight: 500;
 }
@@ -138,7 +138,7 @@ h1{
     position: relative;
     margin-left: 50px;
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 500;
     text-decoration: none;
@@ -147,7 +147,7 @@ h1{
 
 .forgot-pin-code:hover, .forgot-pin-code:active{
     color: white;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
