--- a/css/main_cashbacks.css
+++ b/css/main_cashbacks.css
@@ -142,10 +142,7 @@ body{
     margin-bottom: 17px;
     display: flex;
     flex-direction: row;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    align-items: center;
 }
 
 .choice-type{
@@ -175,26 +172,86 @@ body{
 }
 
 
-input[type="checkbox"] {
-    background-color: transparent;
-    margin: 0;
-    font: inherit;
-    color: white;
-    width: 1.15em;
-    height: 1.15em;
-    border: 0.15em solid white;
-    border-radius: 50%;
-    transform: translateY(-0.075em);
+
+
+/* The container */
+.checkbox-container {
+    display: flex;
+    position: relative;
+    padding-left: 35px;
+    margin-left: auto;
+    align-items: center;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
   
-input[type="checkbox"]:checked ~ .checkmark{
-    background-color: red;
+/* Hide the browser's default checkbox */
+  .checkbox-container input {
+    position: relative;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
 }
+  
+/* Create a custom checkbox */
+.checkmark {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 26px;
+    width: 26px;
+    border: 2px solid white;
+    border-radius: 50%;
+    background-color: transparent;
+
+}
+  
+
+  /* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+
+    background-color: red;
+    border: 0px solid transparent;
+    
+}
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+  
+  /* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+    display: block;
+}
+  
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+    position: relative;
+    margin: 0 auto;
+    margin-top: 3px;
+    width: 9px;
+    height: 16px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: translate(-50% , -50%);
+    transform: rotate(45deg);
+}
+
 
 .navbar{
     width: 100%;
     height: 88px;
-    position: fixed;
+    position: sticky;
     bottom: 0px;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
