created charity page

--- a/css/main_statistics.css
+++ b/css/main_statistics.css
@@ -11,7 +11,7 @@ body{
     align-items: center;
 }
 
-.statistics_to_the_card-title{
+.statistics-title{
     color: white;
     font-family: 'Inter', sans-serif;
     font-weight: 800;
