--- a/css/main_cashbacks.css
+++ b/css/main_cashbacks.css
@@ -172,9 +172,6 @@ body{
 }
 
 
-
-
-/* The container */
 .checkbox-container {
     display: flex;
     position: relative;
@@ -189,7 +186,7 @@ body{
     user-select: none;
 }
   
-/* Hide the browser's default checkbox */
+
   .checkbox-container input {
     position: relative;
     opacity: 0;
@@ -198,7 +195,7 @@ body{
     width: 0;
 }
   
-/* Create a custom checkbox */
+
 .checkmark {
     position: relative;
     top: 0;
@@ -212,7 +209,6 @@ body{
 }
   
 
-  /* When the checkbox is checked, add a blue background */
 .checkbox-container input:checked ~ .checkmark {
 
     background-color: red;
@@ -220,19 +216,19 @@ body{
     
 }
   
-  /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark:after {
     content: "";
     position: absolute;
     display: none;
 }
   
-  /* Show the checkmark when checked */
+
 .checkbox-container input:checked ~ .checkmark:after {
     display: block;
 }
   
-/* Style the checkmark/indicator */
+
 .checkbox-container .checkmark:after {
     position: relative;
     margin: 0 auto;
@@ -247,6 +243,32 @@ body{
     transform: rotate(45deg);
 }
 
+.btn-confirm{
+    position: relative;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    background: red;
+    border: 0px solid transparent;
+    border-radius: 12px;
+    padding: 12px 44px 12px 44px;
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    transition: all 0.2s ease;
+}
+
+.btn-confirm:hover{
+    background: orangered;
+}
+
+.btn-confirm:active{
+    background: orangered;
+    filter: brightness(80%);
+}
 
 .navbar{
     width: 100%;
