--- a/css/more.css
+++ b/css/more.css
@@ -186,7 +186,7 @@ input[type=number] {
 }
 
 .list-container{
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 420px;
