--- a/css/installment_buying_in_parts.css
+++ b/css/installment_buying_in_parts.css
@@ -3,21 +3,29 @@ body{
     background-size: cover;
 }
 
+.installment-title-div{
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    position: relative;
+    margin-top: 26px;
+    margin-left: 28px;
+    margin-bottom: 40px;
+}
+
 .installment-title{
     color: white;
     font-family: 'Inter', sans-serif;
-    font-size: 24px;
     font-weight: 800;
-    position: relative;
-    margin-top: 64px;
-    margin-left: 34px;
-    margin-bottom: 40px;
+    font-size: 24px;
+    margin-bottom: 0px;
 }
+
 
 .user-limit-text-container{
     position: relative;
     margin: 0 auto;
-    margin-bottom: 76px;
+    margin-bottom: 92px;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -51,68 +59,127 @@ body{
     text-align: center;
 }
 
-.list-container{
-    position: fixed;
-    bottom: 0;
+
+.buying-in-parts-container{
     width: 100%;
-    height: 462px;
     background: rgba(0, 0, 0, 0.7);
-    border: 1px solid white ;
+    border: 1px solid white;
     border-top-left-radius: 23px;
     border-top-right-radius: 23px;
     backdrop-filter: blur(8px);
-  
-  }
-  
-  .decoration-line{
-    width: 25%;
-    height: 7px;
-    background: white;
-    border-radius: 23px;
+    box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.25);
+    padding-top: 20px;
+    padding-bottom: 307px;
+    position: relative;
+}
+
+.decoration-line{
     position: relative;
     margin: 0 auto;
-    margin-top: 14px;
+    width: 20%;
+    height: 5px;
+    background: white;
+    border-radius: 5px;
+    margin-bottom: 38px;
+}
 
-  }
-  
-  .installment-options{
-    list-style: none;
+.payment-container{
+    position: relative;
+    display: flex;
+    gap: 14px;
+    margin-left: 28px;
+}
+
+.photocontainer{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: white;
+}
+
+.company-logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.payment-info-container{
     display: flex;
     flex-direction: column;
-    gap: 26px;
-    padding-left: 0px;
-    margin-top: 34px;
-    margin-left: 23px;
-    margin-bottom: 80px;
-  }
-  
-  .link-installment-options{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 16px;
-    color: white;
-    text-decoration: none;
-    transition: all 0.2s ease;
-  }
+    gap: 10px;
+}
 
-
-  .link-installment-options p{
+.company-name{
     color: white;
-    text-decoration: none;
     font-family: 'Inter', sans-serif;
-    font-weight: 800px;
     font-size: 18px;
+    font-weight: 700;
     margin-bottom: 0px;
-  }
-  
-  .link-installment-options:hover{
+}
+
+.monthly-payment-container{
+    display: flex;
+    gap: 38px;
+    align-items: center;
+}
+
+.next-payment-container{
+    display: flex;
+    gap: 59px;
+    align-items: center;
+}
+
+.sum-container{
+    display: flex;
+    gap: 119px;
+    align-items: center;
+}
+
+.monthly-payment-text, .next-payment-text, .sum-text{
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 13px;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+
+.payment-amount, .next-payment-date{
+    display: flex;
+    gap: 4px;
+    align-items: center;
+}
+
+.payment-amount p, .next-payment-date p{
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 800;
+    margin-bottom: 0px;
+}
+
+.accept-btn{
+    position: relative;
+    margin: 0 auto;
+    margin-top: 52px;
+    display: flex;
+    background: red;
+    border: 0px solid transparent;
+    border-radius: 12px;
+    padding: 8px 57px;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 750;
+    transition: all 0.2s ease;
+}
+
+.accept-btn:hover, .accept-btn:active{
+    background: orangered;
+}
+
+.accept-btn:active{
     filter: brightness(80%);
-  }
-  
-  .link-installment-options:active{
-    filter: brightness(70%);
-  }
+}
 
 .navbar{
     width: 100%;
